--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,16 +1,14 @@
-<h1>Sign up</h1>
+<h1>Settings</h1>
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@user) do |f| %>
-     <%= render 'shared/error_messages', object: f.object %> <!-- 追加したぞよ -->
-
+    
       <%= f.label :name %>
       <%= f.text_field :name %>
 
       <%= f.label :email %>
       <%= f.text_field :email %>
-      
 
       <%= f.label :password %>
       <%= f.password_field :password %>
@@ -19,13 +17,14 @@
       <%= f.password_field :password_confirmation %>
       
       <%= f.label :location %>
-      <%= f.text_field :location %>
+      <%= f.text_field :location%>
 
       <%= f.label :description %>
       <%= f.text_field :description %>
-      
 
-      <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
+      <%= f.submit "Update my account", class: "btn btn-large btn-primary" %>
     <% end %>
   </div>
 </div>
+
+
